Add support for protobuf in the android app. Right now, there's a proto message called SensorData that can be referenced from app java files.

--- a/android-razor/app/src/main/res/layout/activity_main.xml
+++ b/android-razor/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.razorski.razor.MainActivity">
 
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/toggleButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:layout_below="@+id/toggleButton"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
