--- a/android-razor/app/src/main/res/layout/activity_main.xml
+++ b/android-razor/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,10 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
+        android:id="@+id/sensorValueText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Sensor values"
         android:layout_below="@+id/toggleButton"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
