--- a/android-razor/app/src/main/res/layout/activity_main.xml
+++ b/android-razor/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     tools:context="com.razorski.razor.MainActivity">
 
-    <ToggleButton
-        android:text="ToggleButton"
-        android:layout_width="wrap_content"
+    <ProgressBar
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toggleButton"
+        android:id="@+id/progressBar"
+        android:indeterminate="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
     <TextView
@@ -23,6 +26,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sensor values"
-        android:layout_below="@+id/toggleButton"
-        android:layout_alignParentStart="true" />
+        android:layout_marginStart="14dp"
+        android:layout_below="@+id/progressBar"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="23dp" />
+
+    <CheckBox
+        android:text="Disconnected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/connectionStatus"
+        android:layout_alignBaseline="@+id/sensorValueText"
+        android:layout_alignBottom="@+id/sensorValueText"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp" />
 </RelativeLayout>
