--- a/android-razor/app/src/main/res/layout/activity_main.xml
+++ b/android-razor/app/src/main/res/layout/activity_main.xml
@@ -41,4 +41,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:visibility="invisible" />
+
+    <Switch
+        android:text="Record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="97dp"
+        android:id="@+id/record_switch"
+        android:checked="false"
+        android:visibility="invisible"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
