--- a/android-razor/app/src/main/res/layout/activity_main.xml
+++ b/android-razor/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    tools:context="com.razorski.razor.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TextView
-        android:id="@+id/sensorValueText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sensor values"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="63dp"
-        android:layout_below="@+id/progressBar"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/connectionStatus"
-        android:layout_alignParentEnd="true" />
-
-    <CheckBox
-        android:text="Disconnected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/connectionStatus"
-        android:layout_below="@+id/progressBar"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="14dp" />
-
-    <ProgressBar
-        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
+    <!-- This is the app bar and the main content -->
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:indeterminate="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:visibility="invisible" />
+        android:layout_height="match_parent" />
 
-    <Switch
-        android:text="Record"
+    <!-- Navigation bar on the left -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="97dp"
-        android:id="@+id/record_switch"
-        android:checked="false"
-        android:visibility="invisible"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/activity_main_drawer"
+        app:headerLayout="@layout/nav_header_main" />
+
+</android.support.v4.widget.DrawerLayout>
