--- a/android-razor/app/src/main/res/layout/nav_header_main.xml
+++ b/android-razor/app/src/main/res/layout/nav_header_main.xml
@@ -12,40 +12,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:gravity="start"
-        android:layout_gravity="start"
-        android:paddingLeft="0dp">
+    <com.android.volley.toolbox.NetworkImageView
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:id="@+id/nav_bar_profile_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/nav_bar_profile_pic"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
-            android:layout_weight="1"
-            android:layout_gravity="center" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:layout_width="109dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/nav_bar_login_button"
-            android:text="Login"
-            android:layout_gravity="center" />
-
-    </LinearLayout>
+    <Button
+        android:layout_width="109dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/nav_bar_login_button"
+        android:text="Login"
+        android:layout_gravity="center" />
 
     <TextView
-        android:layout_width="347dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="[user name]"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:id="@+id/nav_bar_user_name" />
+        android:id="@+id/nav_bar_user_name"
+        android:visibility="gone" />
 </LinearLayout>
