--- a/android-razor/app/src/main/res/layout/activity_login.xml
+++ b/android-razor/app/src/main/res/layout/activity_login.xml
@@ -18,4 +18,17 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:text="Delete All My Data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/login_button"
+        android:layout_marginBottom="43dp"
+        android:id="@+id/delete_all_data_btn"
+        android:layout_alignEnd="@+id/login_button"
+        android:layout_alignStart="@+id/login_button"
+        android:fontFamily="sans-serif-medium"
+        android:background="@android:color/holo_red_dark"
+        android:textColor="#FFFFFFFF" />
+
 </RelativeLayout>
