--- a/android-razor/app/src/main/res/layout/nav_header_main.xml
+++ b/android-razor/app/src/main/res/layout/nav_header_main.xml
@@ -38,4 +38,10 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/nav_bar_user_name"
         android:visibility="gone" />
+
+    <Button
+        android:text="TL"
+        android:layout_width="76dp"
+        android:layout_height="36dp"
+        android:id="@+id/test_login_button" />
 </LinearLayout>
